Fix layout issues

--- a/src/sources/forus-webshop/scss/_common/components/_ui-controls.scss
+++ b/src/sources/forus-webshop/scss/_common/components/_ui-controls.scss
@@ -137,7 +137,7 @@
             text-align: center;
             padding: 0;
             font: inherit;
-            padding: $formPadding;
+            padding: 30px;
             min-width: 152px;
             padding-left: 40px;
             padding-right: 40px;
